[package]
name = "pin-cushion"
version = "0.1.0"
authors = ["timob"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rss = "1.9"
reqwest = { version = "0.10", features = ["blocking"] }
fehler = "1.0"
regex = "1.3"
lazy_static = "1.4"
dirs = "3.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
ctrlc = "3.1"
tokio = { version = "0.2", features = ["full"] }
